--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gmo-group-b-alfa",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,9 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "googleapis": "^126.0.1",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
