--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "googleapis": "^126.0.1",
-    "mysql": "^2.18.1",
-    "next": "13.4.19",
-    "next-auth": "^4.23.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.9.1",
-    "typeorm": "^0.3.17",
-    "typescript": "5.2.2"
-  }
+   "name": "app",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@types/node": "20.5.9",
+      "@types/react": "18.2.21",
+      "@types/react-dom": "18.2.7",
+      "eslint": "8.48.0",
+      "eslint-config-next": "13.4.19",
+      "googleapis": "^126.0.1",
+      "next": "13.4.19",
+      "next-auth": "^4.23.1",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "^0.3.17",
+      "typescript": "5.2.2"
+   }
 }
