--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,18 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.7.0",
+      "@types/express": "^4.17.17",
       "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.17",
-      "reflect-metadata": "^0.1.13",
-      "mysql": "^2.14.1",
+      "body-parser": "^1.19.1",
       "express": "^4.17.2",
-      "body-parser": "^1.19.1"
+      "mysql": "^2.14.1",
+      "pg": "^8.11.3",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "^0.3.17"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
