--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -12,6 +12,7 @@ jobs:
         runs-on: ubuntu-latest
         env:
             GH_TOKEN: ${{ github.token }}
+            PR_URL: ${{github.event.pull_request.html_url}}
 
         strategy:
             matrix:
