--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -7,6 +7,10 @@ on:
     pull_request:
         branches: ["main"]
 
+permissions:
+    pull-requests: write
+    contents: write
+
 jobs:
     build:
         runs-on: ubuntu-latest
